- moved the chatlog to the main client window
- minimap and buddies are now a side panel
- added a way to clean the house portal cache
- tell support about /script DropPlayerItems
- fixed item log on drop of stackable items
- store content to database on closing a stored chest incase server does not
shut gracefully
- automatically close stored chest when the zone it is in becomes empty of players


0.76
- ported to the latest release of marauroa with supports multi threaded database access
- support for OpenJDK IcedTea (thanks to omair)
- corpse images used are now specified in xml
- corpses redrawn and new kinds added

0.75
- the corpse of a raid creature can only be looted by player that the raid creature attacked
- min level for items which makes them less effective if player is less then min level for using item
  - attacking items have slower rate to hit if user less than min level
  - defending items have less defence if user less than min level
  - for all items with min level the effect is bigger, the further user is from min level
- items display lifesteal and min level attributes in description
- a large memory hole fixed
- Jenny from the Mill sells flower seeds to plant on a patch in Semos Plains N
- added NPCs to website
- prevent creation of accounts with commonly used passwords from a list 
- Sato puts his sheep in the den
* new artwork
- potions, antidotes, poisons
- black dragon, flying golden dragon
- skeletons, fallens of all kinds
* Admin
  - support log available at http://stendhal.game-host.org
  - player history available at http://stendhal.game-host.org/?id=content%2Fadmin%2Fplayerhistory&name=NAME&sublogin=Search
  - new command /adminnote
  - /gmhelp_script and /gmehlp_alter replaced by /gmhelp script and /gmhelp alter

0.74
- player karma affects what skills they lose on death 
 --max 20% for non ring wearers with negative karma, and 10% as before if player karma was 0. if they had positive karma they lose less